@@ -1,3 +1,8 @@
+2008-02-25  Pat Thoyts <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Support recording user colors (from tkchat)
+	and write to a file as .css for the wubchain to use.
+
 2008-06-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Listen on a localhost port for connections from
